force-app/main/default/objects/Account/fields/Licensed_Internal_Users__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Internal_Users__c</fullName>
    <description>Populated by ASX</description>
    <label>Licensed Internal Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>