force-app/main/default/objects/Account/fields/Licensed_Storage__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Storage__c</fullName>
    <description>Populated by ASX</description>
    <inlineHelpText>MB of Staorage</inlineHelpText>
    <label>Licensed Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>