force-app/main/default/objects/Account/fields/Licensed_Users__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Users__c</fullName>
    <description>Sum of the  Licensed Internal Users  +  Licensed External Users</description>
    <formula>Licensed_Internal_Users__c  +  Licensed_External_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the  Licensed Internal Users  +  Licensed External Users</inlineHelpText>
    <label>Licensed Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>