force-app/main/default/objects/Account/fields/Limited_Web_Sub_Addl_Minute_Rate__c.field-meta.xml
<CustomField>
    <fullName>Limited_Web_Sub_Addl_Minute_Rate__c</fullName>
    <defaultValue>0.15</defaultValue>
    <inlineHelpText>Per minute rate applied to each add&#39;l webparticipant over the Web Mtg Pro (25), (150) or old, Web Meeting web sub size.</inlineHelpText>
    <label>Addl Web Meeting Participant Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>