force-app/main/default/objects/Account/fields/Limited_Web_Sub_Size__c.field-meta.xml
<CustomField>
    <fullName>Limited_Web_Sub_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText>Applies to old, Web Meeting Subscription offering. (Not Web Mtg Pro-25)</inlineHelpText>
    <label>Web Meeting Subscription Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>