force-app/main/default/objects/Account/fields/Moderator_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, the chairperson will not be able to launch Conference Controls from CC (Will not be able to host an on-demand web meeting or manage an audio conference using the Conference Controls).</inlineHelpText>
    <label>Conference Controls Allowed</label>
    <type>Checkbox</type>
</CustomField>