force-app/main/default/objects/Account/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the Net Promoter Score calculated on the survey object</description>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>