force-app/main/default/objects/Account/fields/NetSuite_Pull__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Pull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NetSuite Pull</label>
    <type>Checkbox</type>
</CustomField>