force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 10</fullName>
            </value>
            <value>
                <fullName>11-25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-250</fullName>
            </value>
            <value>
                <fullName>&lt; 250</fullName>
            </value>
            <value>
                <fullName>251-500</fullName>
            </value>
            <value>
                <fullName>501-1,000</fullName>
            </value>
            <value>
                <fullName>1,001-2,500</fullName>
            </value>
            <value>
                <fullName>1,001-5,000</fullName>
            </value>
            <value>
                <fullName>2,501-10,000</fullName>
            </value>
            <value>
                <fullName>5,001-10,000</fullName>
            </value>
            <value>
                <fullName>Greater than 10,0000</fullName>
            </value>
            <value>
                <fullName>10,001-20,000</fullName>
            </value>
            <value>
                <fullName>20,000+</fullName>
            </value>
            <value>
                <fullName>Less than 25</fullName>
            </value>
            <value>
                <fullName>25 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 500</fullName>
            </value>
            <value>
                <fullName>500 - 2,000</fullName>
            </value>
            <value>
                <fullName>2,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>