force-app/main/default/objects/Account/fields/NumberofOpptys__c.field-meta.xml
<CustomField>
    <fullName>NumberofOpptys__c</fullName>
    <label>Total # of Opptys</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>