force-app/main/default/objects/Account/fields/of_Tickets_Last_5_Days__c.field-meta.xml
<CustomField>
    <fullName>of_Tickets_Last_5_Days__c</fullName>
    <label># of Tickets Last 5 Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>