force-app/main/default/objects/Account/fields/On_Demand_Platinum_Elite_Webcast__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Platinum_Elite_Webcast__c</fullName>
    <defaultValue>2750</defaultValue>
    <description>Event management support to create a direct to on-demand video &amp; slides presentation for up to 60 minutes in duration and unlimited viewing for 12 months included.</description>
    <inlineHelpText>Event management support to create a direct to on-demand video &amp; slides presentation for up to 60 minutes in duration and unlimited viewing for 12 months included.</inlineHelpText>
    <label>On-Demand Platinum Elite Webcast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>