force-app/main/default/objects/Account/fields/Operator_Assisted_Express_Date__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Express_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date that the operator assisted express rates began applying to this account</description>
    <label>Operator Assisted Express Date</label>
    <type>Date</type>
</CustomField>