force-app/main/default/objects/Account/fields/Operator_Assisted_Express_Dial_Out__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Express_Dial_Out__c</fullName>
    <defaultValue>0.25</defaultValue>
    <description>Operator assisted direct dial out charge per min for this account</description>
    <inlineHelpText>Rate charged for an operator dialing out to US/Canada participant for a Direct Event.</inlineHelpText>
    <label>Operator Assisted Direct Dial Out Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>