force-app/main/default/objects/Account/fields/Operator_Assisted_Express_Domestic_Toll__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Express_Domestic_Toll__c</fullName>
    <defaultValue>0.16</defaultValue>
    <description>Operator Assisted Direct Domestic Toll charge/min for this account</description>
    <inlineHelpText>Rate charged for a participant dialing into the US toll number for a Direct Event.</inlineHelpText>
    <label>Operator Assisted Direct Toll Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>