force-app/main/default/objects/Account/fields/Operator_Assisted_Express_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Express_Toll_Free__c</fullName>
    <defaultValue>0.19</defaultValue>
    <description>Operator Assisted Direct Toll Free cost per min for this account</description>
    <inlineHelpText>Rate charged for a participant dialing into the US toll free number for a Direct Event.</inlineHelpText>
    <label>Operator Assisted Direct Toll Free Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>