force-app/main/default/objects/Account/fields/Operator_Assisted_Premium__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Premium__c</fullName>
    <defaultValue>0.25</defaultValue>
    <description>Operator Assisted Premium Toll Free charge/min for this account</description>
    <inlineHelpText>Rate charged for a participant dialing into the US toll free number for a Premium Event.</inlineHelpText>
    <label>Operator Assisted Premium Toll Free Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>