force-app/main/default/objects/Account/fields/Operator_Assisted_Premium_Date__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Premium_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the operator assisted premium rates began</description>
    <label>Operator Assisted Premium Date</label>
    <type>Date</type>
</CustomField>