force-app/main/default/objects/Account/fields/Operator_Assisted_Premium_Domestic_Toll__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Premium_Domestic_Toll__c</fullName>
    <defaultValue>0.22</defaultValue>
    <description>Operator Assisted Premium Domestic Toll rate/minute for this account</description>
    <inlineHelpText>Rate charged for a participant dialing into the US toll number for a Premium Event.</inlineHelpText>
    <label>Operator Assisted Premium Toll Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>