force-app/main/default/objects/Account/fields/Operator_Assisted_Standard_Date__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Standard_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date that the rates for Operator Assisted Standard began</description>
    <label>Operator Assisted Standard Date</label>
    <type>Date</type>
</CustomField>