force-app/main/default/objects/Account/fields/Operator_Assisted_Standard_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Operator_Assisted_Standard_Toll_Free__c</fullName>
    <defaultValue>0.14</defaultValue>
    <description>Operator Assisted Express toll free rate for this account</description>
    <inlineHelpText>Rate charged for a participant dialing into the US toll free number for an Auto Event.</inlineHelpText>
    <label>Auto Toll Free Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>