force-app/main/default/objects/Account/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>