force-app/main/default/objects/Account/fields/Original_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OriginalSalesPersonAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>