force-app/main/default/objects/Account/fields/Owner_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_ID__c</fullName>
    <formula>Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager ID</label>
    <type>Text</type>
</CustomField>