force-app/main/default/objects/Account/fields/Owner_matches_Ult_Parent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner_matches_Ult_Parent_Owner__c</fullName>
    <formula>IF(
ISBLANK(ParentId), &quot;No Ultimate Parent&quot;,
IF(
(z_RAL_Global_Match__r.OwnerId = OwnerId), &quot;Yes&quot;, 
IF(
(z_RAL_Global_Match__r.OwnerId &lt;&gt; OwnerId),
&quot;No&quot;, &quot;Error in formula&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner matches Ult. Parent Owner</label>
    <type>Text</type>
</CustomField>