force-app/main/default/objects/Account/fields/Owners_Channel_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owners_Channel_Formula__c</fullName>
    <formula>TEXT(Owner.Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Channel</label>
    <type>Text</type>
</CustomField>