force-app/main/default/objects/Account/fields/Owners_Mgmt_Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owners_Mgmt_Level_Formula__c</fullName>
    <formula>Owner.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mgmt Level</label>
    <type>Text</type>
</CustomField>