force-app/main/default/objects/Account/fields/Parent_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Number__c</fullName>
    <formula>Parent.AccountNumber</formula>
    <label>Parent Account Number</label>
    <type>Text</type>
</CustomField>