force-app/main/default/objects/Account/fields/Parent_Text_Only__c.field-meta.xml
<CustomField>
    <fullName>Parent_Text_Only__c</fullName>
    <description>Convert Parent lookup field to text value for sharing rules.</description>
    <inlineHelpText>Convert Parent lookup field to text value for sharing rules.</inlineHelpText>
    <label>Parent (Text Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>