force-app/main/default/objects/Account/fields/ParentsOwnersChannel__c.field-meta.xml
<CustomField>
    <fullName>ParentsOwnersChannel__c</fullName>
    <formula>Parent.Owners_Channel_Formula__c</formula>
    <label>Parent&apos;s Owner&apos;s Channel</label>
    <type>Text</type>
</CustomField>