force-app/main/default/objects/Account/fields/Passcode_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Passcode_Authorization__c</fullName>
    <description>A field to indicate if the Account has given ReadyTalk signed authorization to release to the Account the Access Codes and Passcodes of their users</description>
    <inlineHelpText>A field to indicate if the Account has given ReadyTalk signed authorization to release to the Account the Access Codes and Passcodes of their users. The signed authorization needs to be renewed once a year</inlineHelpText>
    <label>Passcode Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>