force-app/main/default/objects/Account/fields/Percent_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Percent_Active_Users__c</fullName>
    <description>From ASX</description>
    <label>% Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>