force-app/main/default/objects/Account/fields/PGi_Account__c.field-meta.xml
<CustomField>
    <fullName>PGi_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGi Account</label>
    <type>Checkbox</type>
</CustomField>