force-app/main/default/objects/Account/fields/PGi_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_ID__c</fullName>
    <description>This is the company ID created by PGi for accounts.</description>
    <label>PGi Company ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>