force-app/main/default/objects/Account/fields/PGi_Company_ID_S4B__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_ID_S4B__c</fullName>
    <description>PGi Company ID related to Skype For Business usage</description>
    <label>PGi Company ID (S4B)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>