force-app/main/default/objects/Account/fields/PGi_Rep__c.field-meta.xml
<CustomField>
    <fullName>PGi_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>