force-app/main/default/objects/Account/fields/Platinum_Elite_Webcast_150_Participant__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Elite_Webcast_150_Participant__c</fullName>
    <defaultValue>3450</defaultValue>
    <description>Pre-, live and post-event management support for a webcast that includes integrated streaming video &amp; audio support for up to 150 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</description>
    <inlineHelpText>Pre-, live and post-event management support for a webcast that includes integrated streaming video &amp; audio support for up to 150 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</inlineHelpText>
    <label>Platinum Elite Webcast: 150 Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>