force-app/main/default/objects/Account/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>**DO NOT MODIFY**
Used to track a PO number provided by the customer. Billing team includes on the monthly invoice.</description>
    <label>PO Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>