force-app/main/default/objects/Account/fields/Podcast__c.field-meta.xml
<CustomField>
    <fullName>Podcast__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Allows chairperson to create a podcast from a recorded conference.</inlineHelpText>
    <label>Podcasting</label>
    <type>Checkbox</type>
</CustomField>