force-app/main/default/objects/Account/fields/Potential_New_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Potential_New_Opportunities__c</fullName>
    <formula>IF(Gross_Annual_Opportunity__c =0,0,
  IF(Gross_Annual_Opportunity__c &gt;10000000,5,
    IF(Gross_Annual_Opportunity__c &gt;1000000,4,
      IF(Gross_Annual_Opportunity__c &gt;500000,3,
        IF(Gross_Annual_Opportunity__c &gt;250000,2,
          IF(Gross_Annual_Opportunity__c &lt;250001,1,NULL)
        )
      )
    )
  )
)</formula>
    <inlineHelpText>The max number of Potential New Opportunities for the account based on the current active order and the number of employees</inlineHelpText>
    <label># Potential New Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>