force-app/main/default/objects/Account/fields/Potiential_Duplicate_via_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Potiential_Duplicate_via_DUNS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto checked by the Account Trigger to auto match a Parent Account.  If multiple matches are found for the Parent account then they will be marked as TRUE for potential duplicate.</description>
    <label>Potiential Duplicate via DUNS</label>
    <type>Checkbox</type>
</CustomField>