force-app/main/default/objects/Account/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <description>short term field for admin use only per Vanessa Cuffy - 2/15/16</description>
    <inlineHelpText>short term field for admin use only per Vanessa Cuffy - 2/15/16</inlineHelpText>
    <label>Processed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>