force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>this are are the product they purchased and maps to product line</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier Edition</fullName>
            </value>
            <value>
                <fullName>Marketing Premier Edition</fullName>
            </value>
            <value>
                <fullName>SocialBridge</fullName>
            </value>
            <value>
                <fullName>Marketers</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Team Edition</fullName>
            </value>
            <value>
                <fullName>Team Plus Edition</fullName>
            </value>
            <value>
                <fullName>Marketing Professional</fullName>
            </value>
            <value>
                <fullName>Community Edition</fullName>
            </value>
            <value>
                <fullName>Company Plan</fullName>
            </value>
            <value>
                <fullName>Free Edition</fullName>
            </value>
            <value>
                <fullName>Group Edition</fullName>
            </value>
            <value>
                <fullName>Professional Edition</fullName>
            </value>
            <value>
                <fullName>Team Plan</fullName>
            </value>
            <value>
                <fullName>Workgroup Edition</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>