force-app/main/default/objects/Account/fields/Provisioning_Email_Template_Override__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Email_Template_Override__c</fullName>
    <description>Override Provisioning Email Template name. Select &quot;None&quot; if you want the standard rules to be used</description>
    <inlineHelpText>None to use standard email template rules, or select to OVERRIDE</inlineHelpText>
    <label>Provisioning Email Template Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provisioning: BBS</fullName>
                <default>true</default>
                <label>Provisioning: BBS</label>
            </value>
            <value>
                <fullName>Provisioning: Dominion Email</fullName>
            </value>
            <value>
                <fullName>Provisioning: Partner Email</fullName>
            </value>
            <value>
                <fullName>Provisioning: BBS Audio Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>