force-app/main/default/objects/Account/fields/Quickstart__c.field-meta.xml
<CustomField>
    <fullName>Quickstart__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows an audio conference to start without the chairperson. Participants will be placed directly into the meeting without the need for the chairperson to log in.</inlineHelpText>
    <label>Quickstart Allowed</label>
    <type>Checkbox</type>
</CustomField>