force-app/main/default/objects/Account/fields/Rate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rate_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date these shown rates began to apply to this account</description>
    <inlineHelpText>This date shows when the rates for on-demand/per-minute audio and web rates, event and Custom Int&#39;l Audio Schedule rates begin to apply to this account.</inlineHelpText>
    <label>Rate Start Date</label>
    <type>Date</type>
</CustomField>