force-app/main/default/objects/Account/fields/Recording_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Recording_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Will slow down provisioning when updated.  Needs to be updated with non-patria user name</description>
    <inlineHelpText>Allows chairperson to record audio or audio/web conference.</inlineHelpText>
    <label>Recording Allowed</label>
    <type>Checkbox</type>
</CustomField>