force-app/main/default/objects/Account/fields/Recording_Editing_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Recording_Editing_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow recordings to be edited</description>
    <inlineHelpText>Allows chairperson to edit audio and web recordings in Conference Center.</inlineHelpText>
    <label>Recording Editing Allowed</label>
    <type>Checkbox</type>
</CustomField>