force-app/main/default/objects/Account/fields/Reference_Material__c.field-meta.xml
<CustomField>
    <fullName>Reference_Material__c</fullName>
    <label>Reference Material</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>