force-app/main/default/objects/Account/fields/Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_Notes__c</fullName>
    <description>Notes associated with the contact/account who referred ReadyTalk to this account.</description>
    <label>Referral Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>