force-app/main/default/objects/Account/fields/Referred_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who referred ReadyTalk to this account.</description>
    <label>Referred By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>