force-app/main/default/objects/Account/fields/Renewal_Signal__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Signal__c</fullName>
    <formula>IMAGE(  
  CASE(Up_sell_Opportunities__c,  
    &quot;Up-sell Alert&quot;, &quot;/img/samples/light_green.gif&quot;, 
    &quot;Maintenance&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
    &quot;Low Usge Alert&quot;, &quot;/img/samples/light_red.gif&quot;,
    &quot;/s.gif&quot;),
    &quot;status color&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Signal</label>
    <type>Text</type>
</CustomField>