force-app/main/default/objects/Account/fields/Reseller_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Salesperson__c</fullName>
    <label>Reseller Salesperson</label>
    <length>100</length>
    <type>Text</type>
</CustomField>