force-app/main/default/objects/Account/fields/Reservationless_Web__c.field-meta.xml
<CustomField>
    <fullName>Reservationless_Web__c</fullName>
    <defaultValue>0.20</defaultValue>
    <description>Cost of reservationless web per minute for this account.</description>
    <inlineHelpText>Per-Minute (On-Demand) web conferencing price.</inlineHelpText>
    <label>Web Conferencing</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>